--- a/style/responsive.css
+++ b/style/responsive.css
@@ -1,6 +1,15 @@
 /* Responsive for Mobile Device */
 @media screen and (max-width: 576px) {
-    /* Adjust the font size and spacing for smaller screens */
-   .navbar-brand {
-
+ /* navbar responsive Start   */
+  .navbar{
+    margin: 0;
+    padding: 50px 20px 5px 20px;
+  }
+  .nav-links {
+    display: none;
+  }
+  .hamberger {
+    display: block;
+    /* navbar responsive Ends  */
+    
 }
