--- a/style/style.css
+++ b/style/style.css
@@ -18,20 +18,26 @@ body {
   width: 100%;
   background: #000000;
 }
+main{
+  max-width: 1044px;
+  margin: 0 auto; 
+}
 
 /* shared style */
+
 .display-flex {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+}
+main > section {
+  margin-top: 130px;
+  margin-bottom: 130px;
 }
 /* navbar starts here */
 .navbar {
-  max-width: 1440px;
+  max-width: 1044px;
   /* border: 2px solid #dadada; */
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   margin: 0 auto;
   padding-top:50px ;
   
@@ -48,11 +54,12 @@ body {
   border: none;
   border-radius: 50px;
   padding: 5px 12px;
-  cursor: pointer;
+  /* cursor: pointer; */
 }
 .nav-links {
   color: white;
-  font-weight: 600;
+  font-size: 16px;
+  font-weight: 400;
   border: 1px solid rgba(255, 255, 255, 0.1);
   border-radius: 50px;
   list-style: none;
@@ -61,10 +68,9 @@ body {
   text-decoration: none;
   gap: 3vw;
   padding: 10px;
+  cursor: pointer;
 }
-.nav-links li {
-  corsor: pointer;
-}
+
 .hamberger {
   color: white;
   font-size: 25px;
@@ -76,7 +82,7 @@ body {
 .banner-container {
   width: 100%;
   height: 752px;
-  border: 0;
+  border: none;
   background: linear-gradient(180.00deg, rgb(17, 17, 17),rgba(119, 119, 119, 0) 100%);');
   background-repeat: no-repeat;
   background-size: cover;
@@ -84,28 +90,29 @@ body {
   margin: 0 auto;
 }
 .banner{
-  max-width:1440px ;
+  max-width:1044px ;
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
   margin-top: 32px;
-  gap: 54px;
+  gap: 20px;
   
 }
 .banner-left-container{
   width: 50%;
+  height: 100%;
   /* border: 2px solid red; */
   margin: 0 auto;
   
 
 }
 .banner-left-container h1{
-  font-size: 78px;
-  font-weight: 800;
+  font-size: 5rem;
+  font-weight: 900;
   color: white;
   row-height: 1px;
-  line-height: 80px;
-  margin-top: 80px;
+  line-height: 5rem;
+  margin-top: 5rem;
   margin-bottom: 28px;
 
 }
@@ -116,10 +123,10 @@ body {
 }
 
 .banner-left-container p{
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 400;
   color: rgba(255, 255, 255, 0.5);
-  padding-right: 200px;
+  padding-right: 180px;
   margin-bottom: 28px;
 
 }
@@ -158,7 +165,7 @@ body {
   border: 1px solid rgba(255, 255, 255, 0.1);
   border-radius: 16px;
   position: absolute;
-  right: 150px;
+  right: 350px;
   top: 250px;
 }
 .banner-child-1 h1{
@@ -181,7 +188,7 @@ body {
   border-radius: 8px;
   backdrop-filter: blur(20px);
   position: absolute;
-  right: 500px;
+  right: 700px;
   bottom: 300px;
   
   
@@ -206,11 +213,460 @@ body {
   border-radius: 50%;
   background: #e6533c;
   position: absolute;
-  right: 650px;
+  right: 850px;
   bottom: 325px;
+  
 
+}
+/* Main Section start here */
+.container {
+  width: 90%;
+  margin: 5rem auto;
+  border-radius: 1rem;
+}
+.circular-image {
+  width: 180px; /* Adjust the width as needed */
+  height: 180px; /* Adjust the height as needed */
+  border-radius: 50%;
+  border: 5px solid #1a1a1a;
+  object-fit: cover;
+}
+.btn-primary {
+  background-color: #e6533c;
+  color: aliceblue;
+  border-radius: 8px;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+/* main section styles start here */
+
+.parents {
+  max-width: 1044px;
+  text-align: center;
+  margin: 0 auto;
+  margin-top: 100px;
+}
+.parents h1 {
+  color: white;
+  font-size: 48px;
+  font-weight: 900;
+  line-height: 120%;
+  margin-bottom: 14px;
+}
+.parents h3 {
+  color: white;
+  font-size: 16px;
+  margin-top: 10px;
+}
+.parents .short-des {
+  padding: 0 100px;
+}
+.short-des{
+  margin-bottom: 50px;
+}
+
+.parents p {
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: 0.3px;
+  margin-top: 14px;
+}
+
+.child-container {
+  max-width: 1044px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.image-container1 {
+  width: 25%;
+  
+}
+.image-container2 {
+  width: 25%;
+}
+.image-container3 {
+  width: 25%;
+}
+.image-container4 {
+  width: 25%;
+}
+/* Section 3 Design Starts  */
+
+.main-container {
+  width: 1040px;
+  height: 371px;
+  margin: 0 auto;
+  background: #222222;
+  padding: 24px;
+  border-radius: 18px;
+  display: flex;
+  overflow: hidden;
+  position: relative;
+  margin-top: 130px;
+}
+.title-part {
+  width: 50%;
+  /* border: 2px solid #af0a0a; */
+}
+.title-part h1 {
+  color: white;
+  font-size: 48px;
+  font-weight: 900;
+  line-height: 120%;
+  margin-bottom: 14px;
+  margin-top: 20px;
+}
+.title-part p {
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.3px;
+  margin-bottom: 34px;
+}
+
+.title-part button {
+  width: 224px;
+  height: 54px;
+  background-color: #e6533c;
+  color: white;
+  border: none;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 22px;
+  padding: 16px 40px;
+  border-radius: 50px;
+  cursor: pointer;
+}
+
+.image-part {
+  width: 50%;
+  /* border: 2px solid #9e06c4; */
+}
+.image-part img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 18px;
+  /* border: 2px solid #9e06c4; */
+}
+
+.teams-title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.teams-title h1 {
+  color: white;
+  font-size: 38px;
+  font-weight: 800;
+  margin-bottom: 14px;
+}
+.teams-title p {
+  max-width: 600px;
+  color: #8b8c8c;
+  font-size: 14px;
+  font-weight: 400;
+  margin-bottom: 34px;
+  line-height: 2.5vh;
+}
+/* Table Container Start Here */
+.table-container {
+  padding: 30px;
+  margin-top: 100px;
+  background-color: #272727;
+  
+  width: 100%;
+  height: 400px;
+  display: flex;
+}
+.table-container1{
+  max-width: 1044px;
+  margin: 0 auto;
+  display: flex;
+  
+}
+.table-data {
+  width: 50%;
+  margin: 0 auto;
+}
+
+table {
+  border-collapse: collapse;
+}
+td,
+th {
+  border: 1px solid #dadada;
+  padding: 5px 10px;
+}
+.table-data h2 {
+  font-size: 1.3rem;
+  color: white;
+  margin-bottom: 34px;
+  margin-top: 34px;
+}
+th {
+  font-size: 1rem;
+  color: white;
+  font-weight: 400;
+}
+td {
+  font-size: 0.9rem;
+  color: #8b8c8c;
+  font-weight: 400;
+}
+.bmi-calculator{
+  margin-left: 200px;
+}
+.bmi-calculator h2 {
+  font-size: 1.25rem;
+  color: white;
+  margin-bottom: 14px;
+  margin-top: 34px;
+}
+.bmi-calculator p {
+  max-width: 400px;
+  font-size: 0.8rem;
+  color: #8b8c8c;
+  margin-bottom: 34px;
+}
+
+.bmi-calculator input{
+  width: 250px;
+  height: 40px;
+  background-color: #3B3B3B;
+  border-radius: 5px;
+  border: none;
+  margin-bottom: 10px;
+}
+
+#input2{
+  width: 250px;
+  height: 40px;
+  margin-left: 10px;
+}
+#input4{
+  width: 250px;
+  height: 40px;
+  margin-left: 10px;
+}
+#input5{
+  width: 515px;
+  height: 40px;
 }
 
 
 
-/* banner section Ends here */
+
+/* Trainer Section */
+
+.trainer {
+  position: relative;
+  background-color: #1f1f1f;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
+  padding: 30px;
+  border-radius: 18px;
+}
+
+.trainer img {
+  width: 300px;
+  height: 270px;
+  border-radius: 18px;
+  background-size: cover;
+}
+.trainer-name {
+  position: absolute;
+  top: 45%;
+  right: 50%;
+  left: 10%;
+  transform: translate(-40px, -50px);
+}
+.trainer-name h3 {
+  color: white;
+  font-size: 16px;
+  font-weight: 400;
+}
+.trainer-name p {
+  color: #8b8c8c;
+}
+.trainer-name2 {
+  position: absolute;
+  top: 45%;
+  right: 100%;
+  left: 40%;
+  transform: translate(-40px, -50px);
+}
+.trainer-name2 h3 {
+  color: white;
+  font-size: 16px;
+  font-weight: 400;
+}
+.trainer-name2 p {
+  color: #8b8c8c;
+}
+.trainer-name3 {
+  position: absolute;
+  top: 45%;
+  left: 10%;
+  left: 75%;
+  transform: translate(-40px, -50px);
+}
+.trainer-name3 h3 {
+  color: white;
+  font-size: 16px;
+  font-weight: 400;
+}
+.trainer-name3 p {
+  color: #8b8c8c;
+}
+.trainer-name4 {
+  position: absolute;
+  top: 90%;
+  left: 10%;
+  transform: translate(-40px, -50px);
+}
+.trainer-name4 h3 {
+  color: white;
+  font-size: 16px;
+  font-weight: 400;
+}
+.trainer-name4 p {
+  color: #8b8c8c;
+}
+.trainer-name5 {
+  position: absolute;
+  top: 90%;
+  left: 40%;
+  transform: translate(-40px, -50px);
+}
+.trainer-name5 h3 {
+  color: white;
+  font-size: 16px;
+  font-weight: 400;
+}
+.trainer-name5 p {
+  color: #8b8c8c;
+}
+.trainer-name6 {
+  position: absolute;
+  top: 90%;
+  left: 75%;
+  transform: translate(-40px, -50px);
+}
+.trainer-name6 h3 {
+  color: white;
+  font-size: 16px;
+  font-weight: 400;
+}
+.trainer-name6 p {
+  color: #8b8c8c;
+}
+/* Footer Section Start */
+.footer {
+  position: relative;
+  max-width: 100%;
+  height: 400px;
+  background-color: #1f1f1f;
+  margin: 0 auto;
+  bottom: 0px;
+}
+.footer-container {
+  max-width: 1044px;
+  margin: 0 auto;
+  display: flex;
+  /* justify-content: space-evenly; */
+  
+  /* align-items: center; */
+}
+.footer-left {
+  width: 33%;
+  display: flex;
+  flex-direction: column;
+  margin-top: 80px;
+}
+.footer-left h1 {
+  color: #e5543e;
+  font-size: 3rem;
+  font-weight: 800;
+  margin-bottom: 14px;
+}
+.footer-left p {
+  color: #8b8c8c;
+  max-width: 450px;
+  font-size: 0.8rem;
+  line-height: 2.2vh;
+  font-weight: 400;
+}
+
+.footer-midle {
+  margin-top: 80px;
+  margin-left: 300px;
+  width: 33%;
+  display: flex;
+  flex-direction: column;
+}
+.footer-midle h2 {
+  color: white;
+  font-size: 1.3rem;
+  font-weight: 500;
+  margin-bottom: 1rem;
+}
+.footer-midle a {
+  color: #8b8c8c;
+  font-size: 0.9rem;
+  font-weight: 500;
+  text-decoration: none;
+  margin-top: 14px;
+}
+.footer-right {
+  margin-top: 80px;
+  margin-left: 100px;
+  width: 33%;
+  display: flex;
+  flex-direction: column;
+}
+.footer-right h2 {
+  color: white;
+  font-size: 1.3rem;
+  font-weight: 500;
+  margin-bottom: 1rem;
+}
+.footer-right a {
+  color: #8b8c8c;
+  font-size: 0.9rem;
+  font-weight: 500;
+  text-decoration: none;
+  margin-top: 14px;
+}
+.last-line {
+  max-width: 1044px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.last-line p {
+  font-size: 14px;
+  font-weight: 400;
+  color: #8b8c8c;
+  margin-top: 20px;
+}
+hr {
+  background-color: #8b8c8c;
+  max-width: 1044px;
+  margin: 0 auto;
+}
+/* Footer Section Start */
+
+
