--- a/style/style.css
+++ b/style/style.css
@@ -4,14 +4,12 @@
   src: url('../fonts/Miama.woff2') format('truetype');
   font-weight: 400;
 }
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Inter", sans-serif;
 }
-
 html,
 body {
   height: 100%;
@@ -19,12 +17,10 @@ body {
   background: #000000;
 }
 main{
-  max-width: 1044px;
+  max-width: 1060px;
   margin: 0 auto; 
 }
-
 /* shared style */
-
 .display-flex {
   display: flex;
   align-items: center;
@@ -36,18 +32,16 @@ main > section {
 }
 /* navbar starts here */
 .navbar {
-  max-width: 1044px;
+  max-width: 1060px;
   /* border: 2px solid #dadada; */
   margin: 0 auto;
   padding-top:50px ;
-  
 }
 .navbar h1 {
   color: #e6533c;
   font-size: 38px;
   font-weight: 800;
 }
-
 .btn-home {
   color: white;
   background-color: #e6533c;
@@ -77,7 +71,6 @@ main > section {
   display: none;
 }
 /* navbar Ends here */
-
 /* banner section starts here */
 .banner-container {
   width: 100%;
@@ -90,21 +83,18 @@ main > section {
   margin: 0 auto;
 }
 .banner{
-  max-width:1044px ;
+  max-width:1060px ;
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
   margin-top: 32px;
   gap: 20px;
-  
 }
 .banner-left-container{
   width: 50%;
   height: 100%;
   /* border: 2px solid red; */
   margin: 0 auto;
-  
-
 }
 .banner-left-container h1{
   font-size: 5rem;
@@ -114,21 +104,18 @@ main > section {
   line-height: 5rem;
   margin-top: 5rem;
   margin-bottom: 28px;
-
 }
 .banner-left-container span{
   font-family: miama;
   font-weight: 400;
   font-size: 7rem;
 }
-
 .banner-left-container p{
   font-size: 1rem;
   font-weight: 400;
   color: rgba(255, 255, 255, 0.5);
   padding-right: 180px;
   margin-bottom: 28px;
-
 }
 .banner-btn1{
   color: white;
@@ -179,7 +166,6 @@ main > section {
   font-weight: 400;
   color: #FFFFFFA6;
 }
-
 .banner-child-2{
   width: 206px;
   height: 96px;
@@ -193,9 +179,7 @@ main > section {
   /* right: 700px;
   bottom: 300px; */
   top: 60%;
-  left: 52%;
-  
-  
+  left: 52%; 
 }
 .banner-child-2 h1{
   font-size: 24px;
@@ -210,7 +194,6 @@ main > section {
   color: #FFFFFFA6;
   margin-left: 40px;
 }
-
 .banner-child-3{
   width: 40px;
   height: 40px;
@@ -221,8 +204,6 @@ main > section {
   bottom: 325px; */
   top: 63.5%;
   left: 53%;
-  
-
 }
 /* Main Section start here */
 .container {
@@ -244,11 +225,9 @@ main > section {
   padding: 10px 20px;
   cursor: pointer;
 }
-
 /* main section styles start here */
-
 .parents {
-  max-width: 1044px;
+  max-width: 1060px;
   text-align: center;
   margin: 0 auto;
   margin-top: 100px;
@@ -271,7 +250,6 @@ main > section {
 .short-des{
   margin-bottom: 50px;
 }
-
 .parents p {
   color: rgba(255, 255, 255, 0.5);
   font-size: 14px;
@@ -280,33 +258,20 @@ main > section {
   letter-spacing: 0.3px;
   margin-top: 14px;
 }
-
 .child-container {
-  max-width: 1044px;
+  max-width: 1060px;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
   margin: 0 auto;
 }
-
-.image-container1 {
-  width: 25%;
-  
-}
-.image-container2 {
-  width: 25%;
-}
-.image-container3 {
-  width: 25%;
-}
-.image-container4 {
+.child-container > .image-container1{
   width: 25%;
 }
 /* Run an Extra Section start Here */
-
 .main-container {
-  width: 1040px;
+  width: 1060px;
   height: 371px;
   margin: 0 auto;
   background: #222222;
@@ -337,7 +302,6 @@ main > section {
   letter-spacing: 0.3px;
   margin-bottom: 34px;
 }
-
 .title-part button {
   width: 224px;
   height: 54px;
@@ -350,7 +314,6 @@ main > section {
   border-radius: 50px;
   cursor: pointer;
 }
-
 .image-part {
   width: 50%;
   /* border: 2px solid #9e06c4; */
@@ -362,14 +325,12 @@ main > section {
   border-radius: 18px;
   /* border: 2px solid #9e06c4; */
 }
-
 /* Trainer Container Start Here */
 .training-container{
-  border: 2px solid #9e06c4;
+  /* border: 2px solid #9e06c4; */
   min-height: 600px;
   margin-top: 100px;
   color: #FFFFFFA6;
-  padding: 24px;
 }
 .training-container h2{
   font-size: 48px;
@@ -383,8 +344,46 @@ main > section {
   margin-top: 14px;
   width: 60%;
 }
-
-
+.training-container > .row-2-images{
+  height: 250px;
+}
+.training-container img{
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  margin-top: 58px;
+}
+.row-1-images{
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+}
+.row-2-images{
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  overflow: hidden;
+}
+.bmi-calculator5{
+  /* border:2px solid #9e06c4; */
+  width: 671px;
+  height: 120px;
+  margin-top: 78px;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0 auto; 
+}
+.bmi-calculator5 h2{
+  font-size: 48px;
+  font-weight: 900;
+  margin-bottom: 14px;
+}
+.bmi-calculator5 p{
+  width: 600px;
+  font-size: 16px;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.5);
+}
 
 .teams-title {
   display: flex;
@@ -412,22 +411,19 @@ main > section {
   padding: 30px;
   margin-top: 100px;
   background-color: #272727;
-  
   width: 100%;
   height: 400px;
   display: flex;
 }
 .table-container1{
-  max-width: 1044px;
+  max-width: 1060px;
   margin: 0 auto;
   display: flex;
-  
 }
 .table-data {
   width: 50%;
   margin: 0 auto;
 }
-
 table {
   border-collapse: collapse;
 }
@@ -467,7 +463,6 @@ td {
   color: #8b8c8c;
   margin-bottom: 34px;
 }
-
 .bmi-calculator input{
   width: 250px;
   height: 40px;
@@ -476,7 +471,6 @@ td {
   border: none;
   margin-bottom: 10px;
 }
-
 #input2{
   width: 250px;
   height: 40px;
@@ -492,11 +486,7 @@ td {
   height: 40px;
 }
 
-
-
-
 /* Trainer Section */
-
 .trainer {
   position: relative;
   background-color: #1f1f1f;
@@ -506,12 +496,11 @@ td {
   padding: 30px;
   border-radius: 18px;
 }
-
 .trainer img {
   width: 300px;
   height: 270px;
   border-radius: 18px;
-  background-size: cover;
+  object-fit: cover;
 }
 .trainer-name {
   position: absolute;
@@ -520,12 +509,12 @@ td {
   left: 10%;
   transform: translate(-40px, -50px);
 }
-.trainer-name h3 {
+.trainer h3 {
   color: white;
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 400;
 }
-.trainer-name p {
+.trainer p {
   color: #8b8c8c;
 }
 .trainer-name2 {
@@ -535,14 +524,6 @@ td {
   left: 40%;
   transform: translate(-40px, -50px);
 }
-.trainer-name2 h3 {
-  color: white;
-  font-size: 16px;
-  font-weight: 400;
-}
-.trainer-name2 p {
-  color: #8b8c8c;
-}
 .trainer-name3 {
   position: absolute;
   top: 45%;
@@ -550,27 +531,11 @@ td {
   left: 75%;
   transform: translate(-40px, -50px);
 }
-.trainer-name3 h3 {
-  color: white;
-  font-size: 16px;
-  font-weight: 400;
-}
-.trainer-name3 p {
-  color: #8b8c8c;
-}
 .trainer-name4 {
   position: absolute;
   top: 90%;
   left: 10%;
   transform: translate(-40px, -50px);
-}
-.trainer-name4 h3 {
-  color: white;
-  font-size: 16px;
-  font-weight: 400;
-}
-.trainer-name4 p {
-  color: #8b8c8c;
 }
 .trainer-name5 {
   position: absolute;
@@ -578,27 +543,11 @@ td {
   left: 40%;
   transform: translate(-40px, -50px);
 }
-.trainer-name5 h3 {
-  color: white;
-  font-size: 16px;
-  font-weight: 400;
-}
-.trainer-name5 p {
-  color: #8b8c8c;
-}
 .trainer-name6 {
   position: absolute;
   top: 90%;
   left: 75%;
   transform: translate(-40px, -50px);
-}
-.trainer-name6 h3 {
-  color: white;
-  font-size: 16px;
-  font-weight: 400;
-}
-.trainer-name6 p {
-  color: #8b8c8c;
 }
 /* Footer Section Start */
 .footer {
@@ -610,12 +559,9 @@ td {
   bottom: 0px;
 }
 .footer-container {
-  max-width: 1044px;
+  max-width: 1060px;
   margin: 0 auto;
   display: flex;
-  /* justify-content: space-evenly; */
-  
-  /* align-items: center; */
 }
 .footer-left {
   width: 33%;
@@ -636,7 +582,6 @@ td {
   line-height: 2.2vh;
   font-weight: 400;
 }
-
 .footer-midle {
   margin-top: 80px;
   margin-left: 300px;
@@ -678,7 +623,7 @@ td {
   margin-top: 14px;
 }
 .last-line {
-  max-width: 1044px;
+  max-width: 1060px;
   margin: 0 auto;
   display: flex;
   justify-content: center;
@@ -692,7 +637,7 @@ td {
 }
 hr {
   background-color: #8b8c8c;
-  max-width: 1044px;
+  max-width: 1060px;
   margin: 0 auto;
 }
 /* Footer Section Start */
