--- a/style/style.css
+++ b/style/style.css
@@ -64,7 +64,6 @@ main > section {
   padding: 10px;
   cursor: pointer;
 }
-
 .hamberger {
   color: white;
   font-size: 25px;
@@ -406,6 +405,9 @@ main > section {
   margin-bottom: 34px;
   line-height: 2.5vh;
 }
+.select-container{
+
+}
 /* Table Container Start Here */
 .table-container {
   padding: 30px;
@@ -471,6 +473,33 @@ td {
   border: none;
   margin-bottom: 10px;
 }
+.select-container{
+  position: relative;
+  display: flex;
+  justify-content: center;
+  
+}
+.select-box-1{
+border: none;
+appearance: none;
+padding: 0 30px 0 15px;
+  background-color: #3B3B3B;
+  color: #8b8c8c;
+  min-width: 250px;
+  height: 40px;
+  border-radius: 8px;
+}
+.select-box-2{
+  border: none;
+  appearance: none;
+  padding: 0 30px 0 15px;
+  background-color: #3B3B3B;
+  color: #8b8c8c;
+  min-width: 500px;
+  height: 40px;
+  border-radius: 8px;
+}
+
 #input2{
   width: 250px;
   height: 40px;
@@ -485,6 +514,7 @@ td {
   width: 515px;
   height: 40px;
 }
+
 
 /* Trainer Section */
 .trainer {
