--- a/style/responsive.css
+++ b/style/responsive.css
@@ -18,11 +18,11 @@
   .banner-left-container {
     width: 100%;
   }
-
-  .bmi-calculator {
-    margin-left: 50px;
-  }
-  .banner {
+  .banner,
+  .child-container,
+  .main-container,
+  .training-container,
+  .bmi-calculator5 {
     flex-direction: column;
     max-width: 90%;
     align-items: center;
@@ -59,5 +59,33 @@
   .banner-child-3 {
     top: 112%;
     left: 13%;
+  }
+  .child-container {
+    margin-right: 50px;
+  }
+
+  .parents {
+    margin-top: 320px;
+  }
+
+  .main-container,
+  .training-container {
+    margin-top: 50px;
+  }
+  .title-part {
+    width: 100%;
+  }
+  .title-part button {
+    width: 100%;
+  }
+  .image-part {
+    width: 100%;
+    margin-top: 40px;
+  }
+  .bmi-calculator5 p {
+    width: 100%;
+  }
+  .movement {
+    margin-left: 50px;
   }
 }
