--- a/style/style.css
+++ b/style/style.css
@@ -35,8 +35,8 @@ main{
   justify-content: space-between;
 }
 main > section {
-  margin-top: 130px;
-  margin-bottom: 130px;
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 /* navbar starts here */
 .navbar {
@@ -126,12 +126,13 @@ main > section {
 }
 .banner-btn1{
   color: white;
+  font-size: 1.2rem;
   background-color: #e6533c;
   border: none;
   border-radius: 50px;
   padding: 16px 40px 16px 40px;
   cursor: pointer;
-  margin-right: 10px;
+  /* margin-right: 10px; */
 }
 .banner-btn2{
   color: white;
@@ -257,9 +258,7 @@ main > section {
   text-align: center;
   margin: 0 auto;
 }
-.child-container > .image-container1{
-  /* width: 25%; */
-}
+
 /* Run an Extra Section start Here */
 .main-container {
   width: 1060px;
@@ -318,7 +317,7 @@ main > section {
 /* Trainer Container Start Here */
 .training-container{
   /* border: 2px solid #9e06c4; */
-  min-height: 600px;
+  /* min-height: 600px; */
   margin-top: 100px;
   color: #FFFFFFA6;
 }
@@ -409,7 +408,7 @@ main > section {
 
 .bmi-calculator-main{
   max-width: 1060px;
-  height: 400px;
+  /* height: 400px; */
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
@@ -464,7 +463,7 @@ td {
   color: #8b8c8c;
   margin-bottom: 34px;
 }
-.bmi-calculator-input-box input{
+.bmi-calculator-input-box input {
   width: 250px;
   height: 40px;
   background-color: #3B3B3B;
@@ -475,6 +474,7 @@ td {
 .select-container{
   position: relative;
   margin-bottom: 10px;
+  
 }
 .bmi-calculator-input-box{
   display: grid;
@@ -575,9 +575,8 @@ padding: 0 30px 0 15px;
 .footer {
   position: relative;
   max-width: 100%;
-  height: 400px;
+  /* height: 400px; */
   background-color: #1f1f1f;
-  margin: 0 auto;
   bottom: 0px;
 }
 .footer-container {
@@ -656,12 +655,9 @@ padding: 0 30px 0 15px;
   font-weight: 400;
   color: #8b8c8c;
   margin-top: 20px;
+  margin-bottom: 10px;
 }
-hr {
-  background-color: #8b8c8c;
-  max-width: 1060px;
-  margin: 0 auto;
-}
+
 /* Footer Section Start */
 
 
