--- a/style/style.css
+++ b/style/style.css
@@ -415,14 +415,15 @@ main > section {
 }
 .bmi-calculator-left {
   width: 45%;
-  border: 2px salmon solid;
+  /* border: 2px salmon solid; */
 }
 .bmi-calculator-left h2 {
-  font-size: 1.25rem;
+  font-size: 1.5rem;
   color: white;
   margin-bottom: 14px;
   margin-top: 34px;
 }
+
 table {
   border-collapse: collapse;
 }
@@ -432,27 +433,29 @@ th {
   padding: 5px 10px;
 }
 .table-data h2 {
-  font-size: 1.3rem;
+  font-size: 1.5rem;
   color: white;
   margin-bottom: 34px;
   margin-top: 34px;
 }
 th {
-  font-size: 1rem;
+  padding: 10px 20px;
+  font-size: 1.3rem;
   color: white;
   font-weight: 400;
 }
 td {
-  font-size: 0.9rem;
+  font-size: 1rem;
+  padding: 10px 20px;
   color: #8b8c8c;
   font-weight: 400;
 }
 .bmi-calculator-right{
   width: 50%;
-  border: 2px solid green;
+  /* border: 2px solid green; */
 }
 .bmi-calculator-right h2 {
-  font-size: 1.25rem;
+  font-size: 1.5rem;
   color: white;
   margin-bottom: 14px;
   margin-top: 34px;
@@ -463,7 +466,7 @@ td {
   color: #8b8c8c;
   margin-bottom: 34px;
 }
-.bmi-calculator-input-box input {
+.input-box1 input  {
   width: 250px;
   height: 40px;
   background-color: #3B3B3B;
@@ -471,6 +474,26 @@ td {
   border: none;
   margin-bottom: 10px;
 }
+.input-box-2 input  {
+  width: 250px;
+  height: 40px;
+  background-color: #3B3B3B;
+  border-radius: 5px;
+  border: none;
+}
+.bmi-calculator-right button{
+width: 224px;
+  height: 54px;
+  background-color: #e6533c;
+  color: white;
+  border: none;
+  font-size: 18px;
+  font-weight: 600;
+  padding: 16px 40px;
+  border-radius: 50px;
+  cursor: pointer;
+}
+  
 .select-container{
   position: relative;
   margin-bottom: 10px;
@@ -498,14 +521,14 @@ padding: 0 30px 0 15px;
 
 .select-box-second{
   border: none;
-  appearance: none;
+  /* appearance: none; */
   padding: 0 30px 0 15px;
   background-color: #3B3B3B;
   color: #8b8c8c;
   min-width: 500px;
   height: 40px;
   border-radius: 8px;
-  margin-bottom: 10px;
+  margin: 10px 0 ;
 }
 
 /* Trainer Section */
@@ -577,6 +600,7 @@ padding: 0 30px 0 15px;
   max-width: 100%;
   /* height: 400px; */
   background-color: #1f1f1f;
+  margin: 0 auto;
   bottom: 0px;
 }
 .footer-container {
@@ -655,7 +679,6 @@ padding: 0 30px 0 15px;
   font-weight: 400;
   color: #8b8c8c;
   margin-top: 20px;
-  margin-bottom: 10px;
 }
 
 /* Footer Section Start */
