--- a/style/style.css
+++ b/style/style.css
@@ -1,9 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
-@font-face{
-  font-family: miama;
-  src: url('../fonts/Miama.woff2') format('truetype');
-  font-weight: 400;
-}
+@import url('https://fonts.cdnfonts.com/css/miama');
 * {
   margin: 0;
   padding: 0;
@@ -671,10 +667,10 @@ padding: 0 30px 0 15px;
   margin-top: 14px;
 }
 .last-line {
- width: 90%;
+ width: 100%;
   margin: 0 auto;
   display: flex;
-  justify-content: start;
+  justify-content: center;
   
 }
 .last-line p {
