--- a/style/style.css
+++ b/style/style.css
@@ -147,7 +147,7 @@ main > section {
 }
 .banner-right-container img{
   /* border: 2px solid blue; */
-  float: right;
+  margin-left: 190px;
   position: relative;
 }
 .banner-child-1{
@@ -206,6 +206,14 @@ main > section {
   top: 53%; 
   left: 53%;
   
+}
+.banner-child-3 i{
+  color: white;
+  font-size: 25px;
+  position: absolute;
+  left: 30%;
+  bottom: 15%;
+  display: none;
 }
 /* Main Section start here */
 .circular-image {
@@ -471,6 +479,7 @@ td {
   background-color: #3B3B3B;
   border-radius: 5px;
   border: none;
+  outline: none;
   margin-bottom: 10px;
 }
 .input-box-2 input  {
@@ -479,9 +488,10 @@ td {
   background-color: #3B3B3B;
   border-radius: 5px;
   border: none;
+  outline: none;
 }
 .bmi-calculator-right button{
-width: 224px;
+  width: 224px;
   height: 54px;
   background-color: #e6533c;
   color: white;
@@ -492,23 +502,27 @@ width: 224px;
   border-radius: 50px;
   cursor: pointer;
 }
-  
+.input-box1 input{
+padding-left: 15px;
+}
+.input-box-2 input{
+  padding-left: 15px;
+}
 .select-container{
   position: relative;
   margin-bottom: 10px;
-  
 }
 .bmi-calculator-input-box{
   display: grid;
   grid-template-columns: repeat(2 , 1fr);
 }
 .select-box-first{
-border: none;
+  border: none;
 /* appearance: none; */
 padding: 0 30px 0 15px;
   background-color: #3B3B3B;
   color: #8b8c8c;
-  min-width: 250px;
+  width: 250px;
   height: 40px;
   border-radius: 8px;
 }
@@ -529,7 +543,6 @@ padding: 0 30px 0 15px;
   border-radius: 8px;
   margin: 10px 0 ;
 }
-
 /* Trainer Section */
 .trainer {
   position: relative;
